--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,14 @@
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.2</version>
 				<configuration>
+					<artifactItems>
+						<artifactItem>
+							<groupId>com.github.jsimone</groupId>
+							<artifactId>webapp-runner</artifactId>
+							<version>8.5.11.3</version>
+							<destFileName>webapp-runner.jar</destFileName>
+						</artifactItem>
+					</artifactItems>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
