--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,18 +4,14 @@
                         http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
                         version="3.0">
 
-	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
-	
-	<!-- Creates the Spring Container shared by all Servlets and Filters -->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
 
-	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -41,9 +37,7 @@
     </filter>
     <filter-mapping>
         <filter-name>encoding</filter-name>
-        <url-pattern>/*</url-pattern> <!-- 모든 패턴(url) -->
-        <!-- DispatcherServlet이 모든 요청을 가로챌 수 있도록 등록 -->
-        <!-- 특정 url으로 변경하여 사용가능 ex) *.do -->
+        <url-pattern>/*</url-pattern> 
     </filter-mapping>
 
 </web-app>
